--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.1"
+    "semantic-ui-react": "^0.88.1",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/payments-new"
+  "homepage": "/payments-new/"
 }
