--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "formik": "^2.0.7",
     "lodash": "^4.17.15",
+    "prop-types": "latest",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
@@ -16,7 +18,7 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
-    "prop-types": "latest"
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
